# convert_image

./: Readme.md  pyproject.toml
.github/workflows/: learn-github-actions.yml
src/: convert_png_to_svg.py
tests/: convert_png_to_svg_test.py
workflows/: learn-github-actions.yml
